--- a/css/index.css
+++ b/css/index.css
@@ -12,21 +12,26 @@
   margin: 0;
   padding: 0;
 }
-.main-div {
+/* .main-div {
   background: url(/images/backcover.svg);
   background-repeat: no-repeat;
   background-position: top;
   background-position-x: right;
-}
+} */
 nav {
   display: flex;
   justify-content: space-between;
   padding: 12px;
+  flex-wrap: wrap;
 }
+
 nav img {
-  position: relative;
-  left: 126px;
+  margin-left: 126px;
 }
+.nav-items{
+  display: none;
+}
+@media only screen and (min-width:1020px) {
 .nav-items {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
@@ -38,6 +43,25 @@ nav img {
   position: relative;
   right: 24px;
 }
+.main-div {
+  background: url(/images/backcover.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+  background-position-x: right;
+}
+.vector-img {
+
+  position: relative;
+  top: 173px;
+  left: 129px;
+}
+.vector-dot {
+  position: relative;
+  top: 132px;
+  left: 90px;
+}
+}
+
 .signin-btn {
   font-family: "Roboto";
   width: 73px;
@@ -47,25 +71,62 @@ nav img {
   border: 1px;
   align-self: center;
   color: white;
-  position: relative;
-  right: 150px;
+  /* position: relative;
+  right: 150px; */
+  margin-right: 100px;
+}
+@media only screen and (max-width:1020px){
+  .signin-btn{
+    margin-right:20px;
+  }
+  nav img {
+    margin-left: 20px;
+  }
+  .left-section {
+    display: flex;
+    margin-left: 10px;
+    flex-direction: column;
+    gap:150px;
+    margin-top:100px;
+  }
+}
+@media only screen and (min-width:974px){
+  .left-section {
+    display: flex;
+    margin-left: 75px;
+    flex-direction: column;
+    gap:150px;
+    margin-top:200px;
+  }
 }
 .intro-section {
   display: flex;
+  
 }
-.left-section {
-  display: flex;
-  padding: 75px;
-  flex-direction: column;
-  justify-content: space-around;
+@media only screen and (max-width:924px){
+  .intro-section {
+    display: flex;
+    flex-direction: column;
+  }
+  .left-section {
+    display: flex;
+    margin-left: 0px;
+    padding-right: 10px;
+    flex-direction: column;
+    gap:150px;
+    margin-top:100px;
+    position: relative;
+    right: 40px;
+  }
 }
+
 .left-section h1 {
   font-family: "Roboto";
   color: #3e4794;
   font-size: 60px;
   position: relative;
   left: 64px;
-bottom: 20px;
+/* bottom: 20px; */
 }
 
 .left-section h4 {
@@ -93,15 +154,33 @@ bottom: 20px;
   display: flex;
 }
 .intro-img {
-  padding-right: 70px;
+  padding-right: 80px;
+}
+@media only screen and(min-width:974) and (max-width:1316px) {
+  .intro-img{
+    padding-right: 20px;
+    width: 700px;
+  }
+}
+@media only screen and (max-width:974px) {
+  .intro-img{
+    padding-right: 20px;
+    width: 300px;
+    position: relative;
+    bottom: 200px;
+    right:70px;
+  }
+  
 }
 .vector-img {
+  position: relative;
   position: relative;
   top: 173px;
   left: 129px;
 }
 .vector-dot {
   position: relative;
-  top: 132px;
-  left: 90px;
+  position: relative;
+  top: 173px;
+  left: 129px;
 }
